resolved admin dashboard data loading failures